# Course_work

./: .env  .env.example  README.md  pyproject.toml  user_settings_json.py
src/: main.py  report.txt  reports.py  services.py  utils.py  views.py
tests/: conftest.py  report.txt  test_reports.py  test_services.py  test_utils.py  test_views.py
